# epbf-playground

./: .gitignore  flake.nix
hello/: Cargo.toml  README.md
hello/.vim/: coc-settings.json
hello/hello/: Cargo.toml
hello/hello-common/: Cargo.toml
hello/hello-ebpf/: Cargo.toml
hello/hello-ebpf/src/: main.rs
hello/hello/src/: main.rs
hello/xtask/src/: build_ebpf.rs  run.rs
